syntax = "proto3";

package shareledger.distributionx;

import "gogoproto/gogo.proto";
import "shareledger/distributionx/params.proto";
import "shareledger/distributionx/reward.proto";
import "shareledger/distributionx/builder_count.proto";
import "shareledger/distributionx/builder_list.proto";
// this line is used by starport scaffolding # genesis/proto/import


option go_package = "github.com/sharering/shareledger/x/distributionx/types";

// GenesisState defines the sdistribution module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated Reward rewardList = 2 [(gogoproto.nullable) = false];
  repeated BuilderCount builderCountList = 3 [(gogoproto.nullable) = false];
  repeated BuilderList builderListList = 4 [(gogoproto.nullable) = false];
  uint64 builderListCount = 5;
  // this line is used by starport scaffolding # genesis/proto/state
}
